# tiny-kv-store

./: CMakeLists.txt  README.md  main.cpp
docs/: tiny-kv-store.md
include/: tiny_kv_store.hpp
notes/codes/: CMakeLists.txt  lambda.cpp
src/: CMakeLists.txt  tiny_kv_store.cpp
tests/: CMakeLists.txt
